p2/confs/ingress.yaml
# Este archivo es el "Recepcionista". Redirigirá el tráfico según el HOST
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
spec:
  rules:
  # Reglas explícitas para app1
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
  # Reglas explícitas para app2
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
  # El "Otherwise, app3 will be selected by default".
  # Al no poner 'host', Traefik entiende que esto es el comodín (*) para todo el tráfico no coincidente.
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3
            port:
              number: 80
